--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Bundle",
             "type": "python",
             "request": "launch",
-            "program": "C:\\Users\\smrdgy\\Desktop\\renpy-8.1.3-sdk\\sssss\\.bundler\\bundle.py",
+            "program": "${cwd}/.bundler/bundle.py",
             "console": "integratedTerminal",
             "justMyCode": true
         }
