--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -117,6 +117,12 @@
                 "settings": {
                     "foreground": "#ff623a"
                 }
+            },
+            {
+                "scope": "renpy.meta.color.#818181",
+                "settings": {
+                    "foreground": "#818181"
+                }
             }
         ]
     }
