Replace 0x52's inputs with custom made ones

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -123,6 +123,12 @@
                 "settings": {
                     "foreground": "#818181"
                 }
+            },
+            {
+                "scope": "renpy.meta.color.#f00",
+                "settings": {
+                    "foreground": "#f00"
+                }
             }
         ]
     }
