--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -147,6 +147,12 @@
                 "settings": {
                     "foreground": "#ffb14c"
                 }
+            },
+            {
+                "scope": "renpy.meta.color.#0f0",
+                "settings": {
+                    "foreground": "#0f0"
+                }
             }
         ]
     }
