--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "**/cache/": true
     },
     "editor.tokenColorCustomizations": {
+        "comments": "#ff8c00",
         "textMateRules": [
             {
                 "scope": "renpy.meta.plain",
@@ -152,6 +153,24 @@
                 "scope": "renpy.meta.color.#0f0",
                 "settings": {
                     "foreground": "#0f0"
+                }
+            },
+            {
+                "scope": "renpy.meta.color.#f0f",
+                "settings": {
+                    "foreground": "#f0f"
+                }
+            },
+            {
+                "scope": "renpy.meta.color.#ff0",
+                "settings": {
+                    "foreground": "#ff0"
+                }
+            },
+            {
+                "scope": "renpy.meta.color.#000000",
+                "settings": {
+                    "foreground": "#000000"
                 }
             }
         ]
